Don't last, peek instead